# codex-notice

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Notice开发方案.md  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
docs/files/: 改动日志.md  用户操作手册.md  错题本.md  项目记忆.md  项目需求文档.md
docs/superpowers/specs/: 2026-06-03-notice-mvp-design.md
docs/videos/notice-promo/: README_EMBED.md  VIDEO_PLAN.md  index.html  meta.json  narration.txt  package.json
docs/videos/notice-promo-vertical/: DESIGN.md  index.html
docs/videos/notice-promo-vertical/assets/notice/: narration-01.aiff
docs/videos/notice-promo/assets/notice/: narration-01.txt  narration-02.txt  narration-03.txt  narration-04.txt  narration-05.txt  narration-06.txt  narration-07.txt  narration.vtt
scripts/: generate_notice_covers.swift
src/: App.vue  api.ts  main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: app_state.rs  codex_usage.rs  lib.rs  main.rs  mochi_voice.rs  pet.rs  secret_store.rs
src-tauri/src/channels/: feishu.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/hooks/: mod.rs
src-tauri/src/rules/: aggregator.rs  mod.rs  redaction.rs  risk.rs
src-tauri/src/server/: mod.rs
src-tauri/src/storage/: mod.rs
src/stores/: approvals.ts  channel.ts  dashboard.ts  events.ts  hooks.ts  traffic.ts
