[package]
name = "notice"
version = "0.1.0"
description = "Developer Notification Center"
authors = ["Notice"]
edition = "2021"

[lib]
name = "notice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[[bin]]
name = "notice"
path = "src/main.rs"

[[bin]]
name = "notice-hook"
path = "src/bin/notice-hook.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
hex = "0.4"
hmac = "0.12"
keyring = { version = "3", features = ["apple-native"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net", "sync"] }
toml_edit = "0.22"
tower-http = { version = "0.6", features = ["limit"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
tower = "0.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
